# petsc-hello

./: CMakeLists.txt  Makefile  README.md  hello1.c  readme.txt  solve1.c
