CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(helloworld)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake-modules")

FIND_PACKAGE(PETSc REQUIRED)

INCLUDE_DIRECTORIES(${PETSC_INCLUDES})
ADD_DEFINITIONS(${PETSC_DEFINITIONS})

ADD_EXECUTABLE(hello1 hello1.c)
ADD_EXECUTABLE(solve1 solve1.c)

TARGET_LINK_LIBRARIES(hello1 ${PETSC_LIBRARIES})
TARGET_LINK_LIBRARIES(solve1 ${PETSC_LIBRARIES})

